--- a/client/src/Components/TransportationType.css
+++ b/client/src/Components/TransportationType.css
@@ -1,10 +1,4 @@
-.transportation-type{
-  background-color: #ffffff;
-  padding: 2px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  width: 200px;
-  font-size: 30px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  border-radius: 4px;
+Button {
+  width: 100px;
+  height: 100px;
 }
